--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "last 2 versions",
     "IE 11"
   ],
+  "engines": {
+    "node": "11.9.0",
+    "npm": "6.8.10"
+  },
   "scripts": {
     "ng": "ng",
     "conventional-changelog": "conventional-changelog",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "build:prod": "npm run build -- --prod --aot",
     "test": "ng test",
@@ -31,6 +35,7 @@
     "docs": "compodoc -p src/tsconfig.app.json -d docs",
     "docs:serve": "compodoc -p src/tsconfig.app.json -d docs -s",
     "prepush": "npm run lint:ci",
+    "heroku-postbuild": "ng build --prod",
     "release:changelog": "npm run conventional-changelog -- -p angular -i CHANGELOG.md -s"
   },
   "dependencies": {
@@ -62,6 +67,7 @@
     "core-js": "2.5.1",
     "echarts": "^4.0.2",
     "eva-icons": "^1.1.0",
+    "express": "^4.16.4",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
     "leaflet": "1.2.0",
@@ -72,19 +78,21 @@
     "ngx-echarts": "^4.0.1",
     "normalize.css": "6.0.0",
     "pace-js": "1.0.2",
+    "path": "^0.12.7",
     "roboto-fontface": "0.8.0",
     "rxjs": "6.3.0",
     "rxjs-compat": "6.3.0",
     "socicon": "3.0.5",
     "tinymce": "4.5.7",
     "typeface-exo": "0.0.22",
+    "typescript": "3.1.3",
     "web-animations-js": "2.2.5",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.10.2",
-    "@angular/compiler-cli": "^7.0.3",
     "@angular/cli": "^7.0.3",
+    "@angular/compiler-cli": "^7.0.3",
     "@angular/language-service": "7.0.0",
     "@compodoc/compodoc": "1.0.1",
     "@fortawesome/fontawesome-free": "^5.2.0",
@@ -96,6 +104,7 @@
     "@types/node": "6.0.90",
     "codelyzer": "^4.5.0",
     "conventional-changelog-cli": "1.3.4",
+    "enhanced-resolve": "^3.3.0",
     "husky": "0.13.3",
     "jasmine-core": "2.6.4",
     "jasmine-spec-reporter": "4.1.1",
